# ApplicationCore

./: .jenkinsfile  CMakeLists.txt  testPythonFileMonitor.py
cmake/: make_coverage.sh.in  runStubgen.sh.in
doc/: ApplicationPVModel_concept.graphml  Migration_Guide_v2_to_v3.md  conceptualOverview.dox  example.dox  examplePythonModules.dox  exceptionHandling.dox  main.dox  spec_dataValidityPropagation.dox  spec_exceptionHandling.dox  spec_initialValuePropagation.dox
example/: CMakeLists.txt  DemoDummyDevice.cc  HowTo_project-template.md  TimerDummyDevice.cc  demoApp.cc
example/config/: DemoDummy.map  demo_example-DoocsVariableConfig.xml  demo_example-config.xml  demo_example.dmap  dummy.dmap  oven.xlmap  ovenInit.py  oven_sim.py  userAppModules.py
example/include/: AverageCurrent.h  Controller.h  ExampleApp.h  SetpointRamp.h
example/src/: AverageCurrent.cc  Controller.cc  ExampleApp.cc  SetpointRamp.cc
example/src_factory/: FactoryInstance.cc
example2/: CMakeLists.txt  demoApp2.cc
example2a/: CMakeLists.txt  demoApp2a.cc
example2c/: CMakeLists.txt  demoApp2c.cc
example3/: CMakeLists.txt  demoApp3.cc
example_status_monitor/: CMakeLists.txt  demoStatusMonitor.cc
example_template/: CMakeLists.txt
example_template/config/: TemplateServer-Config.xml
example_template/include/: Server.h  TemplateModule.h
example_template/modules/: CMakeLists.txt
example_template/modules/include/: TemplateModule.h
example_template/modules/src/: TemplateModule.cc
example_template/server/include/: Server.h  version.h.in
example_template/server/src/: ApplicationInstance.cc  Server.cc
example_template/src/: Server.cc  TemplateModule.cc
example_template/src_server/: ApplicationInstance.cc
example_template/tests/: CMakeLists.txt  testTemplateModule.cc
example_template/tests/executables_src/: testTemplateModule.cc
include/: AccessorConcepts.h  Application.h  ApplicationCore.h  ApplicationModule.h  ArrayAccessor.h  CircularDependencyDetectionRecursionStopper.h  CircularDependencyDetector.h  CircularDependencyRecursionBreaker.h  ConnectionMaker.h  ConstantAccessor.h  ConsumingFanOut.h  ControlSystemModule.h  DebugPrintAccessorDecorator.h  DeviceManager.h  DeviceModule.h  EnableXMLGenerator.h  EntityOwner.h  ExceptionHandlingDecorator.h  FanOut.h  FeedingFanOut.h  Flags.h  HierarchyModifyingGroup.h  InternalModule.h  InversionOfControlAccessor.h  Logger.h  MetaDataPropagatingRegisterDecorator.h  Model.h  Module.h  ModuleGraphVisitor.h  ModuleGroup.h  ModuleImpl.h  Profiler.h  RecoveryHelper.h  ReverseRecoveryDecorator.h  ScalarAccessor.h  SupportedUserTypes.h  TestFacility.h  TestableMode.h  TestableModeAccessorDecorator.h  ThreadedFanOut.h  (+14 more)
src/: Application.cc  ApplicationModule.cc  CircularDependencyDetectionRecursionStopper.cc  CircularDependencyDetector.cc  CircularDependencyRecursionBreaker.cc  ConnectionMaker.cc  ControlSystemModule.cc  DebugPrintAccessorDecorator.cc  DeviceManager.cc  DeviceModule.cc  EntityOwner.cc  ExceptionHandlingDecorator.cc  HierarchyModifyingGroup.cc  Logger.cc  MetaDataPropagatingRegisterDecorator.cc  Model.cc  Module.cc  ModuleGraphVisitor.cc  ModuleGroup.cc  ModuleImpl.cc  Profiler.cc  ReverseRecoveryDecorator.cc  TestFacility.cc  TestableMode.cc  TriggerFanOut.cc  Utilities.cc  VariableGroup.cc  VariableNetwork.cc  VariableNetworkDumpingVisitor.cc  VariableNetworkGraphDumpingVisitor.cc  VariableNetworkModuleGraphDumpingVisitor.cc  VariableNetworkNode.cc  (+4 more)
tests/: CMakeLists.txt  deviceInitScript2.bash  test-async.map  test-ro.map  test-trigger-fanout-iv.map  test.dmap  test2.map  testDataValidityPropagation.map  testPythonApplicationModule.py  testPythonDataConsistencyGroup-config.xml  testPythonDataConsistencyGroup.py  testPythonSimpleApp-config.xml  testPythonVariableGroup-config.xml  testPythonVariableGroup.py  test_readonly.map  test_with_push.map
tests/config/: baseDevice.map  deviceInitScript1.bash  deviceInitScript1.py  deviceInitScript2.bash  deviceInitScript2.py  empty.xlmap  one-register.map  oneTarget.xlmap  recoveryGroups.dmap  recoveryGroups.map  recoveryGroupsTwoTargets.xlmap  recoveryGroupsTwoTargetsRO.xlmap  tagged.xlmap  taggedBitRange.xlmap  test-async.map  test.map  test2_writeonly.map  test3.map  testDataValidityPropagation2.map  testPythonAccessorTags-config.xml  testPythonAccessorTags.py  testPythonAppConfig-config.xml  testPythonAppConfig.py  testPythonApplicationModule-config.xml  testPythonApplicationModule.py  testPythonDataConsistencyGroup.py  testPythonFileMonitor-config.xml  testPythonFileMonitor.py  testPythonPollInputRead-config.xml  testPythonPollInputRead.py  testPythonReadAnyGroup-config.xml  testPythonReadAnyGroup.py  testPythonScalarAccessors-config.xml  testPythonScalarAccessors.py  testPythonSimpleApp.py  testPythonUserInputValidator-config.xml  testPythonUserInputValidator.py  testPythonVariableGroup.py  testPythonVersionNumber-config.xml  testPythonVersionNumber.py  (+4 more)
tests/executables_src/: testAppModuleConnections.cc  testApplication.cc  testBidirectionalVariables.cc  testCSNetworkMerging.cc  testCircularDependencyFaultyFlags.cc  testConfigReader.cc  testConnectTo.cc  testConnectedDestruction.cc  testControlSystemAccessors.cc  testDataConsistencyAC.cc  testDataValidityPropagation.cc  testDeviceAccessors.cc  testDeviceExceptionFlagPropagation.cc  testDeviceInitialisationHandler.cc  testDirectDeviceToCS.cc  testExceptionHandling.cc  testFanIn.cc  testFanoutConnections.cc  testFindTag.cc  testHideThis.cc  testHierarchyModifyingGroup.cc  testHistory.cc  testIllegalNetworks.cc  testInitialValueSpecD8.cc  testLogger.cc  testLogging.cc  testModel.cc  testModules.cc  testNoInitialValue.cc  testOptimiseUnmappedVariables.cc  testPeriodicTrigger.cc  testProcessVariableRecovery.cc  testPropagateDataFaultFlag.cc  testPython.cc  testPythonInitialisationHandler.cc  testRecoveryGroups.cc  testReverseRecovery.cc  testScriptedInitialisationHandler.cc  testStatusAggregator.cc  testStatusModule.cc  (+8 more)
tests/executables_src/manual/: testConnectedDestructionRunner.cc
tests/include/: check_timeout.h  fixtures.h
(+69 files in other folders)
